@@ -16,6 +16,9 @@ sessions, the ROOT file format provides a new 'sessions' keyword. In
 contrast, a theory that is imported in the old-fashioned manner via an
 explicit file-system path belongs to the current session.
 
+Theories that are imported from other sessions are excluded from the
+current session document.
+
 * The main theory entry points for some non-HOL sessions have changed,
 to avoid confusion with the global name "Main" of the session HOL. This
 leads to the follow renamings:
